--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,21 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
 }
 
 .banner {
-  height: 200vh;
-  background: url("../images/divlogo.png") no-repeat;
-  background-size: cover;
+  background: url(../images/divlogo.png) no-repeat;
+  background-size: 100%;
   background-color: #010120;
-  background-position: center;
-  margin: 0;
-  padding: 0;
+  padding: 24px;
 }
 
 .banner__info {
   position: relative;
   text-align: right;
-  padding-top: 25%;
-  padding-right: 7%;
+  padding-top: 28%;
+  padding-right: 6%;
 }
 
 .banner__info__dates,
@@ -27,12 +25,9 @@
   font-weight: 500;
   color: #FFFFFF;
   text-align: right;
-  font-size: 2rem;
+  font-size: 40px;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
-}
-
-.banner__info__place {
-  font-size: 3rem;
+  line-height: 1.2;
 }
 
 .banner__info a {
@@ -41,12 +36,12 @@
   font-weight: 500;
   position: -webkit-sticky;
   position: sticky;
-  padding: .5rem .5rem;
+  padding: .8rem .8rem .8rem .8rem;
   display: inline-block;
   color: #FFFFFF;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 40px;
   overflow: hidden;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
 }
@@ -65,7 +60,7 @@ a span:nth-child(1) {
   top: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 4px;
   background: -webkit-gradient(linear, left top, right top, from(#0c002b), to(rgba(139, 17, 215, 0.78)));
   background: linear-gradient(to right, #0c002b, rgba(139, 17, 215, 0.78));
   -webkit-animation: animate1 1.25s linear infinite;
@@ -98,7 +93,7 @@ a span:nth-child(2) {
   position: absolute;
   top: 0;
   right: 0;
-  width: 2px;
+  width: 4px;
   height: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(#0c002b), to(rgba(139, 17, 215, 0.78)));
   background: linear-gradient(to bottom, #0c002b, rgba(139, 17, 215, 0.78));
@@ -135,7 +130,7 @@ a span:nth-child(3) {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 2px;
+  height: 4px;
   background: -webkit-gradient(linear, right top, left top, from(#0c002b), to(rgba(139, 17, 215, 0.78)));
   background: linear-gradient(to left, #0c002b, rgba(139, 17, 215, 0.78));
   -webkit-animation: animate3 1.25s linear infinite;
@@ -168,7 +163,7 @@ a span:nth-child(4) {
   position: absolute;
   top: 0;
   left: 0;
-  width: 2px;
+  width: 4px;
   height: 100%;
   background: -webkit-gradient(linear, left bottom, left top, from(#0c002b), to(rgba(139, 17, 215, 0.78)));
   background: linear-gradient(to top, #0c002b, rgba(139, 17, 215, 0.78));
@@ -210,7 +205,7 @@ a:hover {
 
 .banner__about {
   text-align: right;
-  padding-top: 35%;
+  padding-top: 28%;
   padding-right: 7%;
 }
 
@@ -220,7 +215,7 @@ a:hover {
   font-weight: 500;
   color: #FFFFFF;
   text-align: right;
-  font-size: 5rem;
+  font-size: 96px;
 }
 
 .banner__about__hackathon {
@@ -231,6 +226,7 @@ a:hover {
   text-align: right;
   font-size: 1.5rem;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  padding-bottom: 20%;
 }
 
 .head {
@@ -240,12 +236,14 @@ a:hover {
   font-weight: 500;
   color: #FFFFFF;
   text-align: center;
-  font-size: 4rem;
+  font-size: 56px;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   background-color: #010120;
+  padding-bottom: 3%;
 }
 
 .categories {
+  padding-bottom: 16%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,7 +256,6 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 90vh;
   background-color: #010120;
 }
 
@@ -294,7 +291,7 @@ a:hover {
   color: #FFFFFF;
   font-size: 2vw;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
-  text-align: center;
+  text-align: left;
 }
 
 .pageBenefits {
@@ -314,6 +311,10 @@ a:hover {
           justify-content: center;
 }
 
+.pageBenefits-text {
+  font-size: 14px;
+}
+
 .pageBenefits {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -322,29 +323,28 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-top: 2%;
-  padding-bottom: 5%;
-  padding-left: 13%;
-  padding-right: 13%;
+  padding-bottom: 16%;
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 .pageBenefits-card {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
 }
 
 .pageBenefits-card img {
-  width: 70%;
-  height: 70%;
+  width: 80%;
+  height: 80%;
 }
 
 .pageBenefits > * {
@@ -362,20 +362,21 @@ a:hover {
       -ms-flex-align: center;
           align-items: center;
   border: 5px solid white;
-  -webkit-box-shadow: 0px 0px 18px 5px rgba(139, 17, 215, 0.78);
-          box-shadow: 0px 0px 18px 5px rgba(139, 17, 215, 0.78);
+  -webkit-box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
+          box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
   border-radius: 30px;
   font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 500;
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  padding: 30px 30px 30px 30px;
+  font-size: 10px;
 }
 
 .front {
+  text-align: center;
   border: 5px solid white;
-  -webkit-box-shadow: 0px 0px 18px 5px rgba(139, 17, 215, 0.78);
-          box-shadow: 0px 0px 18px 5px rgba(139, 17, 215, 0.78);
+  -webkit-animation: pulse .5s infinite alternate ease-in-out;
+          animation: pulse .5s infinite alternate ease-in-out;
   border-radius: 30px;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
@@ -384,14 +385,89 @@ a:hover {
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
 }
 
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
+            box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
+  }
+  100% {
+    -webkit-box-shadow: 0px 0px 18px 10px rgba(191, 112, 192, 0.78);
+            box-shadow: 0px 0px 18px 10px rgba(191, 112, 192, 0.78);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
+            box-shadow: 0px 0px 18px 5px rgba(191, 112, 192, 0.78);
+  }
+  100% {
+    -webkit-box-shadow: 0px 0px 18px 10px rgba(191, 112, 192, 0.78);
+            box-shadow: 0px 0px 18px 10px rgba(191, 112, 192, 0.78);
+  }
+}
+
 .how {
-  padding-top: 7%;
-  padding-bottom: 12%;
+  padding-bottom: 16%;
   background-color: #010120;
   text-align: center;
 }
 
 .how img {
-  width: 80%;
+  width: 60%;
+}
+
+details summary {
+  outline-style: none;
+  /* удалить обводку при фокусе */
+  cursor: pointer;
+  border: 3px solid #FFFFFF;
+  -webkit-box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+          box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+  padding: 1%;
+}
+
+details summary span {
+  width: 3%;
+  float: right;
+  -webkit-transition: all .1s ease-out;
+  transition: all .1s ease-out;
+}
+
+details summary span img {
+  width: 100%;
+  text-align: center;
+}
+
+details[open] summary span {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition: all .1s ease-out;
+  transition: all .1s ease-out;
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+.faq {
+  background-color: #010120;
+  font-size: 24px;
+  line-height: 44px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  padding-bottom: 16%;
+}
+
+.answer {
+  border: 3px solid #FFFFFF;
+  -webkit-box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+          box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+  padding: 1%;
+  border-top: none;
+}
+
+.non-brd {
+  border-top: none;
 }
 /*# sourceMappingURL=style.css.map */
