--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,7 @@ details summary::-webkit-details-marker {
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   padding-bottom: 16%;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .answer {
@@ -469,5 +470,37 @@ details summary::-webkit-details-marker {
 
 .non-brd {
   border-top: none;
+}
+
+.last-year {
+  text-align: center;
+  background-color: #010120;
+  font-size: 36px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  font-family: 'Montserrat', sans-serif;
+  padding-bottom: 3%;
+}
+
+.embed-responsive {
+  border: 5px solid #FFFFFF;
+  -webkit-box-shadow: 0px 0px 12px 2px #12C6FF;
+          box-shadow: 0px 0px 12px 2px #12C6FF;
+}
+
+.your-class {
+  border: 5px solid #FFFFFF;
+  -webkit-box-shadow: 0px 0px 12px 2px #12C6FF;
+          box-shadow: 0px 0px 12px 2px #12C6FF;
+}
+
+.winimg {
+  width: 100%;
+}
+
+.winimg img {
+  width: 100%;
+  padding-bottom: 6%;
+  padding-top: 6%;
 }
 /*# sourceMappingURL=style.css.map */
