--- a/css/style.css
+++ b/css/style.css
@@ -452,8 +452,8 @@ details summary::-webkit-details-marker {
 
 .faq {
   background-color: #010120;
-  font-size: 24px;
-  line-height: 44px;
+  font-size: 20px;
+  line-height: 34px;
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   padding-bottom: 16%;
@@ -466,6 +466,7 @@ details summary::-webkit-details-marker {
           box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
   padding: 1%;
   border-top: none;
+  font-size: 16px;
 }
 
 .non-brd {
@@ -479,7 +480,7 @@ details summary::-webkit-details-marker {
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   font-family: 'Montserrat', sans-serif;
-  padding-bottom: 3%;
+  padding-bottom: 16%;
 }
 
 .embed-responsive {
@@ -502,5 +503,233 @@ details summary::-webkit-details-marker {
   width: 100%;
   padding-bottom: 6%;
   padding-top: 6%;
+}
+
+.partners {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #BAC2FF;
+  border-radius: 30px;
+}
+
+.partners .partners__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.partners .partner-logo {
+  padding: 50px;
+}
+
+.partners .partner-logo img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
+.partners-color {
+  background-color: #010120;
+  padding-bottom: 16%;
+}
+
+.organizers-1 {
+  padding-left: 15%;
+  padding-right: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background: #010120;
+  position: relative;
+  z-index: 2;
+}
+
+.organizers-2 {
+  padding-left: 15%;
+  padding-right: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 16%;
+  background: #010120;
+  position: relative;
+  z-index: 2;
+}
+
+.box {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 30px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background: #010120;
+  text-align: center;
+}
+
+.box .imgBx {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.box .imgBx img {
+  max-width: 100%;
+  opacity: .3;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.box .imgBx span {
+  max-width: 100%;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 34px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.box:hover .imgBx span {
+  -webkit-transition: .5s;
+  transition: .5s;
+  -webkit-transition-delay: .3s;
+          transition-delay: .3s;
+  opacity: 0;
+}
+
+.box:hover {
+  height: 310px;
+}
+
+.box:hover .imgBx img {
+  opacity: 1;
+}
+
+.box:before {
+  content: " ";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: #fff;
+  z-index: -1;
+}
+
+.box:after {
+  content: " ";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: #fff;
+  z-index: -2;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.box:before,
+.box:after {
+  background: linear-gradient(235deg, #772aff, #010120, #2196F3);
+}
+
+.box .content-later {
+  position: absolute;
+  bottom: 0;
+  height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 18px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.box:hover .content-later {
+  opacity: 1;
+}
+
+.smaller {
+  font-size: 13px;
+}
+
+.box .content {
+  position: absolute;
+  bottom: 0;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  height: 100px;
+  opacity: 1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  text-align: center;
+  font-size: 20px;
+  line-height: 34px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  font-family: 'Montserrat', sans-serif;
+}
+
+.box:hover .content {
+  opacity: 0;
+}
+
+.box .content h2 {
+  font-size: 20px;
+  color: #FFFFFF;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 1px;
 }
 /*# sourceMappingURL=style.css.map */
