--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,15 @@
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
 }
 
-a::before {
+.banner__info a:hover {
+  color: #010120;
+  background: #e289d3;
+  -webkit-box-shadow: 0 0 10px #e289d3, 0 0 40px #e289d3, 0 0 80px #e289d3;
+          box-shadow: 0 0 10px #e289d3, 0 0 40px #e289d3, 0 0 80px #e289d3;
+  text-decoration: none;
+}
+
+.banner__info a::before {
   content: "";
   position: absolute;
   top: 2px;
@@ -55,7 +63,7 @@ a::before {
   width: 50%;
 }
 
-a span:nth-child(1) {
+.banner__info a span:nth-child(1) {
   position: absolute;
   top: 0;
   left: 0;
@@ -89,7 +97,7 @@ a span:nth-child(1) {
   }
 }
 
-a span:nth-child(2) {
+.banner__info a span:nth-child(2) {
   position: absolute;
   top: 0;
   right: 0;
@@ -125,7 +133,7 @@ a span:nth-child(2) {
   }
 }
 
-a span:nth-child(3) {
+.banner__info a span:nth-child(3) {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -159,7 +167,7 @@ a span:nth-child(3) {
   }
 }
 
-a span:nth-child(4) {
+.banner__info a span:nth-child(4) {
   position: absolute;
   top: 0;
   left: 0;
@@ -171,14 +179,6 @@ a span:nth-child(4) {
           animation: animate4 1.25s linear infinite;
   -webkit-animation-delay: 0.625s;
           animation-delay: 0.625s;
-}
-
-a:hover {
-  color: #010120;
-  background: #e289d3;
-  -webkit-box-shadow: 0 0 10px #e289d3, 0 0 40px #e289d3, 0 0 80px #e289d3;
-          box-shadow: 0 0 10px #e289d3, 0 0 40px #e289d3, 0 0 80px #e289d3;
-  text-decoration: none;
 }
 
 @-webkit-keyframes animate4 {
@@ -292,6 +292,10 @@ a:hover {
   font-size: 2vw;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   text-align: left;
+}
+
+.categories__container__table .im {
+  text-align: center;
 }
 
 .pageBenefits {
@@ -435,7 +439,7 @@ details summary span {
 }
 
 details summary span img {
-  width: 100%;
+  width: 80%;
   text-align: center;
 }
 
@@ -668,7 +672,7 @@ details summary::-webkit-details-marker {
 
 .box:before,
 .box:after {
-  background: linear-gradient(235deg, #772aff, #010120, #2196F3);
+  background: #2196F3;
 }
 
 .box .content-later {
@@ -731,5 +735,114 @@ details summary::-webkit-details-marker {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: 1px;
+}
+
+.probest {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  font-size: 56px;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+}
+
+.who-we-are {
+  background: #010120;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  font-size: 24px;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  padding-bottom: 16%;
+}
+
+.foto {
+  padding-top: 5% !important;
+}
+
+.who-we-are img {
+  width: 100%;
+  -webkit-box-shadow: 0px 0px 12px 3px #C112FF;
+          box-shadow: 0px 0px 12px 3px #C112FF;
+}
+
+.register-box {
+  background: rgba(180, 107, 225, 0.49);
+  -webkit-box-shadow: 0px 0px 20px 9px rgba(180, 107, 225, 0.78);
+          box-shadow: 0px 0px 20px 9px rgba(180, 107, 225, 0.78);
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #FFFFFF;
+  font-size: 23px;
+}
+
+.register-box a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: .5px solid;
+  border-color: rgba(180, 107, 225, 0.49);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  position: -webkit-sticky;
+  position: sticky;
+  padding: 10px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 20px;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  background: #010120;
+}
+
+.register-box a:hover {
+  border-color: white;
+}
+
+.register-now {
+  background: #010120;
+  padding: 3%;
+}
+
+footer {
+  background-color: #010120;
+}
+
+footer img {
+  max-width: 15%;
+  margin: 5px;
+}
+
+footer a {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  font-size: 24px;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+}
+
+footer a:hover {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  font-size: 24px;
 }
 /*# sourceMappingURL=style.css.map */
